# Sisterifikasi

./: README.md
2.Citer/: .gitignore  CMakeLists.txt  build-run.sh
2.Citer/src/: Exception.cpp  Exception.h  Process.cpp  Process.h  main.cpp  window.cpp  window.hpp  window.ui
6. Turing Machine 101/: README.md
